Fix scrollbar during dragging

--- a/src/components/Board/Cards/style.css
+++ b/src/components/Board/Cards/style.css
@@ -10,8 +10,7 @@
   flex: 1;
   max-height: 100%;
   padding-right: 12px;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 .bdcards-scrollbar::-webkit-scrollbar {
